k8s/system/ingress-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-system
  labels:
    app.kubernetes.io/name: ingress-system
    system: "true"
    tier: core
